fix hero img height cutoff

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -178,6 +178,7 @@ nav {
 
   img {
     width: 95%;
+    height: 100%;
   }
 }
 
